add http headers option

--- a/ssh-auth-fetcher.conf
+++ b/ssh-auth-fetcher.conf
@@ -4,3 +4,4 @@ key_url="https://github.com/${username}.keys"
 #use_cache=1
 #cache_dir=/var/cache/ssh-auth-fetcher
 #cache_ttl=3600
+#headers="x-api-key: YOUR_API_KEY;Authorization: Bearer YOUR_ACCESS_TOKEN"
